<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hlc.diurno.actividadeslayout.RelativeLayout">

    <TextView
        android:id="@+id/tv_relative_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/tv_relative_titulo" />

    <EditText
        android:id="@+id/et_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_relative_titulo"
        android:layout_alignStart="@+id/tv_relative_titulo"
        android:layout_below="@+id/tv_relative_titulo"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_relative"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/btn_aceptar"
        android:layout_toStartOf="@+id/btn_aceptar"
        android:text="@string/btn_cancelar" />

    <Button
        android:id="@+id/btn_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_cancelar"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/btn_aceptar" />
</RelativeLayout>
